chore: prepare for public release
- add LICENSE (MIT), CONTRIBUTING.md, SECURITY.md
- add GitHub issue/PR templates
- add CI workflow (typecheck, lint, test, build)
- add release workflow (release-please + npm OIDC publish)
- add release-please config and manifest
- update package.json with repository and author fields
- update .gitignore with universal patterns
- reformat CHANGELOG.md for release-please compatibility

--- a/package.json
+++ b/package.json
@@ -28,5 +28,10 @@
 		"lint": "biome check src/ __tests__/",
 		"lint:fix": "biome check --write src/ __tests__/"
 	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/dungle-scrubs/synapse.git"
+	},
+	"author": "Kevin Frilot",
 	"license": "MIT"
 }
