fix: add test preload to mock pi-ai peer dependency in CI
pi-ai's export * chain loads provider SDKs (anthropic, openai, google,
aws-bedrock) as side effects. These fail to resolve on Linux CI runners.
Since all tests use either mock.module or DI, a global preload stub
prevents the real module from loading.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	"scripts": {
 		"build": "tsc",
 		"typecheck": "tsc --noEmit",
-		"test": "bun test",
+		"test": "bun test --preload ./__tests__/preload.ts",
 		"lint": "biome check src/ __tests__/",
 		"lint:fix": "biome check --write src/ __tests__/"
 	},
